--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -1,10 +1,7 @@
-@use "../partials/mixins" as *;
-@use "../partials/typography" as *;
-@use "../partials/variables" as *;
-
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 a {
