Bottom Nav Component completed Style and link

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,6 +3,7 @@ $Pink: #eb05a2;
 $Green: #21ef80;
 $Purple: #201147;
 $Dark-Purple: #15124e;
-$Light-Purple: #27254d;
+$Light-Purple: #343178;
 
 //secondary colors
+$Lightest-purple: #423e90;
