--- a/src/pages/TermsConditionsPage/TermsConditionsPage.scss
+++ b/src/pages/TermsConditionsPage/TermsConditionsPage.scss
@@ -3,7 +3,7 @@
 @use "../../styles/partials/variables" as *;
 
 .termsconditions-page {
-  background-image: url("../../assets/background/SignUpMobile.svg");
+  background-image: url("../../assets/background/GamingMobile.svg");
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100dvh;
@@ -16,11 +16,11 @@
 
   @include Tablet {
     gap: 40px;
-    background-image: url("../../assets/background/Terms-Condition-Tablet.svg");
+    background-image: url("../../assets/background/GamingTablet.svg");
   }
 
   @include Desktop {
-    background-image: url("../../assets/background/Terms-Condition-Desktop.svg");
+    background-image: url("../../assets/background/GamingDesktop.svg");
     padding: 60px 40px;
     justify-content: space-evenly;
   }
@@ -59,5 +59,9 @@
   &__mail {
     @include Body;
     color: $Pink;
+  }
+
+  &__list {
+    margin: 10px 0 0 10px;
   }
 }
