Finish settingCourse component mobile - tablet , created skeletons version of setting notification , preferences, profile, create routes and link and useeffect to render components instead of creating a page for each one

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -16,9 +16,8 @@
     height: 60px;
   }
 
-  &-google {
-    background-color: White;
-    color: #757575;
-    padding: 0 10px;
+  &-green {
+    background-color: transparent;
+    border: 3px solid $Green;
   }
 }
