--- a/src/components/bottomNav/bottomNav.scss
+++ b/src/components/bottomNav/bottomNav.scss
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  position: absolute;
+  position: fixed;
   bottom: 0;
 
   &__button {
