Finished setting profile made some change to the mixins and signup and sigin to better reflect the view compare to the figma file. update buttons component to add a new style as well.

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -20,4 +20,9 @@
     background-color: transparent;
     border: 3px solid $Green;
   }
+
+  &-pink {
+    background-color: transparent;
+    border: 3px solid $Pink;
+  }
 }
