--- a/src/pages/SettingPage/SettingPage.scss
+++ b/src/pages/SettingPage/SettingPage.scss
@@ -7,12 +7,12 @@
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100dvh;
-  padding: 40px 20px 110px 20px;
+  padding: 20px 20px 110px 20px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 40px;
 
   overflow-y: scroll;
 
@@ -22,7 +22,7 @@
   }
 
   &__title {
-    @include Heading;
+    @include Title;
     color: white;
     margin: 0 auto;
   }
@@ -32,10 +32,22 @@
     color: white;
   }
 
+  &__bottom-container {
+    width: 100%;
+    max-width: 320px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    @include Tablet {
+      max-width: 650px;
+      flex-direction: row;
+    }
+  }
   &__container {
     width: 100%;
-    max-width: 600px;
   }
+
   &__button {
     width: 100%;
     display: flex;
