--- a/src/pages/SignInPage/SignInPage.scss
+++ b/src/pages/SignInPage/SignInPage.scss
@@ -14,6 +14,8 @@
   align-items: center;
   gap: 20px;
 
+  justify-content: center;
+
   @include Tablet {
     gap: 40px;
     background-image: url("../../assets/background/SignUpTablet.svg");
@@ -31,11 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
-
-    @include Tablet {
-      gap: 20px;
-    }
+    gap: 20px;
 
     @include Desktop {
       align-items: flex-start;
@@ -46,7 +44,7 @@
     }
   }
   &__logo {
-    width: 60%;
+    width: 100%;
 
     @include Desktop {
       width: 80%;
@@ -54,7 +52,7 @@
   }
 
   &__subtitle {
-    @include Heading;
+    @include Title;
     color: white;
     text-align: center;
 
