--- a/src/pages/signupPage/signupPage.scss
+++ b/src/pages/signupPage/signupPage.scss
@@ -14,6 +14,8 @@
   align-items: center;
   gap: 20px;
 
+  justify-content: center;
+
   @include Tablet {
     gap: 40px;
     background-image: url("../../assets/background/SignUpTablet.svg");
@@ -46,7 +48,7 @@
     }
   }
   &__logo {
-    width: 60%;
+    width: 100%;
 
     @include Desktop {
       width: 80%;
@@ -54,7 +56,7 @@
   }
 
   &__subtitle {
-    @include Heading;
+    @include Title;
     color: white;
     text-align: center;
 
