--- a/src/components/settingCourse/settingCourse.scss
+++ b/src/components/settingCourse/settingCourse.scss
@@ -3,18 +3,18 @@
 @use "../../styles/partials/variables" as *;
 
 .setting-courses {
-  background-image: url("../../assets/background/GamingMobile.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 100dvh;
-  padding: 40px 20px 110px 20px;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
 
   overflow-y: scroll;
+
+  @include Desktop {
+    gap: unset;
+    width: 320px;
+    align-items: unset;
+  }
 
   &__top-container {
     width: 100%;
@@ -26,11 +26,28 @@
     @include Title;
     color: white;
     margin: 0 auto;
+
+    @include Desktop {
+      display: none;
+    }
+  }
+
+  &__sub-title {
+    display: none;
+
+    @include Desktop {
+      display: block;
+      @include Sub-Title;
+      color: white;
+    }
   }
 
   &__container {
     width: 100%;
-    max-width: 620px;
+    max-width: 320px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
   &__button {
     width: 100%;
@@ -44,6 +61,10 @@
     background-color: transparent;
     height: 50px;
     padding: 5px 10px;
+
+    &:last-child {
+      border-bottom: none;
+    }
 
     @include Sub-Title;
     color: white;
@@ -61,6 +82,12 @@
 
     &--last {
       border-bottom: none;
+    }
+  }
+
+  &__link-back {
+    @include Desktop {
+      display: none;
     }
   }
 }
