--- a/src/pages/SettingPage/SettingPage.scss
+++ b/src/pages/SettingPage/SettingPage.scss
@@ -12,19 +12,41 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
+  gap: 20px;
 
   overflow-y: scroll;
+
+  @include Tablet {
+    background-image: url("../../assets/background/GamingTablet.svg");
+    padding: 20px 40px 110px 40px;
+    gap: 40px;
+  }
+
+  @include Desktop {
+    background-image: url("../../assets/background/GamingDesktop.svg");
+    padding: 20px 60px 110px 60px;
+    gap: 60px;
+  }
 
   &__top-container {
     width: 100%;
     display: flex;
+
+    justify-content: center;
+
+    &--alt {
+      display: none;
+      @include Desktop {
+        display: block;
+      }
+    }
   }
 
   &__title {
     @include Title;
     color: white;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
   }
 
   &__subtitle {
@@ -34,14 +56,41 @@
 
   &__bottom-container {
     width: 100%;
+
+    @include Desktop {
+      display: flex;
+
+      justify-content: center;
+      gap: 40px;
+    }
+  }
+
+  &__left-container {
+    width: 100%;
     max-width: 320px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    align-items: center;
 
     @include Tablet {
-      max-width: 650px;
-      flex-direction: row;
+      max-width: 320px;
+    }
+
+    @include Desktop {
+      flex-direction: column;
+      width: 40%;
+      max-width: unset;
+    }
+
+    &--alt {
+      display: none;
+      @include Desktop {
+        display: block;
+        gap: 40px;
+        display: flex;
+        max-width: 400px;
+      }
     }
   }
   &__container {
