Made changes to input , button , google button components and Sigin and signup pages to reflect figma update designs

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -10,10 +10,11 @@
   border-radius: 10px;
   height: 50px;
   border: none;
-  @include Sub-Title;
+  @include Body;
 
   @include Tablet {
-    height: 60px;
+    height: 80px;
+    max-width: 368px;
   }
 
   &-green {
