--- a/src/pages/signupPage/signupPage.scss
+++ b/src/pages/signupPage/signupPage.scss
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 
     @include Tablet {
       gap: 20px;
@@ -45,7 +45,7 @@
       width: 43%;
       gap: 40px;
       max-width: 420px;
-      height: 500px;
+      height: 590px;
     }
   }
   &__logo {
@@ -57,7 +57,7 @@
   }
 
   &__subtitle {
-    @include Title;
+    @include Sub-Title;
     color: white;
     text-align: center;
 
@@ -93,17 +93,17 @@
     max-width: 350px;
 
     @include Tablet {
-      max-width: 400px;
+      max-width: 368px;
     }
 
     @include Desktop {
       width: 43%;
       max-width: 420px;
-      height: 500px;
+      height: 590px;
       padding: 20px;
       background-color: $Purple;
       border-radius: 25px;
-      border: white 2px solid;
+      border: white 3px solid;
     }
   }
 
