--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -16,6 +16,7 @@
 @mixin Body {
   font-family: "Abaddon";
   font-size: 1rem;
+  color: white;
 
   @include Tablet {
     font-size: 1.25rem;
@@ -25,6 +26,7 @@
 @mixin Sub-Title {
   font-family: "Laconic";
   font-size: 1.25rem;
+  color: white;
 
   @include Tablet {
     font-size: 1.875rem;
@@ -35,6 +37,7 @@
   font-family: "Heavitas";
   font-size: 1.5rem;
   line-height: 130%;
+  color: white;
 
   @include Tablet {
     font-size: 3rem;
@@ -44,6 +47,7 @@
 @mixin Label {
   font-family: "Abaddon";
   font-size: 0.875rem;
+  color: white;
 
   @include Tablet() {
     font-size: 1.125rem;
