Fixed icons not sizing correct because of incorrect format.
Bottom Nav desktop view change in order to get a cleaner asethic .

Add icons to UserData / Course Icon to display current course in profile page

--- a/src/components/bottomNav/bottomNav.scss
+++ b/src/components/bottomNav/bottomNav.scss
@@ -18,6 +18,14 @@
     gap: 40px;
   }
 
+  @include Desktop {
+    width: 90px;
+    height: 100%;
+    left: 0;
+    top: 0;
+    flex-direction: column;
+  }
+
   &__button {
     background-color: $Lightest-purple;
     height: 50px;
