--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -18,7 +18,7 @@
   &__image-profile {
     border-radius: 100%;
     border: 3px solid $Green;
-    height: 100px;
+    height: 150px;
     width: auto;
   }
 
@@ -28,6 +28,7 @@
     align-items: center;
     max-width: 320px;
     width: 100%;
+    gap: 10px;
   }
 
   &__name {
@@ -65,6 +66,15 @@
       flex-direction: column;
       justify-content: space-between;
       gap: 5px;
+
+      &-container {
+        display: flex;
+        justify-content: space-between;
+      }
+      &-img {
+        width: 18px;
+        height: 18px;
+      }
     }
     &-course {
       border: 1px solid $Green;
@@ -72,7 +82,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 25px;
+      width: 20px;
     }
     &-following {
       @include Label;
