Restyled bottom nav and renamed it to Nav since it was restyled.
Update all the pages to align update figma files and styles.

Added a new mixins large desktop

--- a/src/pages/GlossaryPage/GlossaryPage.scss
+++ b/src/pages/GlossaryPage/GlossaryPage.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.dashboard {
+.glossary {
   @include Desktop {
     display: flex;
     width: 100%;
