--- a/src/pages/SettingPage/SettingPage.scss
+++ b/src/pages/SettingPage/SettingPage.scss
@@ -2,128 +2,136 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.setting-page {
-  background-image: url("../../assets/background/GamingMobile.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 100dvh;
-  padding: 30px 20px 110px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-
-  overflow-y: scroll;
-
-  @include Tablet {
-    background-image: url("../../assets/background/GamingTablet.svg");
-    padding: 20px 40px 110px 40px;
-    gap: 40px;
-  }
-
+.setting {
   @include Desktop {
-    background-image: url("../../assets/background/GamingDesktop.svg");
-    padding: 20px 60px 110px 60px;
-    gap: 60px;
+    display: flex;
+    width: 100%;
+    height: 100dvh;
   }
 
-  &__top-container {
-    width: 100%;
+  &-page {
+    background-image: url("../../assets/background/GamingMobile.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100dvh;
+    padding: 30px 20px 110px 20px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+    overflow-y: scroll;
 
-    justify-content: center;
-
-    &--alt {
-      display: none;
-      @include Desktop {
-        display: block;
-      }
+    @include Tablet {
+      background-image: url("../../assets/background/GamingTablet.svg");
+      padding: 20px 40px 110px 40px;
+      gap: 40px;
     }
-  }
-
-  &__title {
-    @include Title;
-    color: white;
-    display: flex;
-    justify-content: center;
-  }
-
-  &__subtitle {
-    @include Sub-Title;
-    color: white;
-  }
-
-  &__bottom-container {
-    width: 100%;
 
     @include Desktop {
+      background-image: url("../../assets/background/GamingDesktop.svg");
+      padding: 20px 60px 110px 60px;
+      gap: 60px;
+    }
+
+    &__top-container {
+      width: 100%;
       display: flex;
 
       justify-content: center;
-      gap: 40px;
-    }
-  }
 
-  &__left-container {
-    width: 100%;
-    max-width: 320px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-
-    @include Tablet {
-      max-width: 368px;
-      gap: 40px;
-    }
-
-    @include Desktop {
-      flex-direction: column;
-    }
-
-    &--alt {
-      display: none;
-      @include Desktop {
-        display: block;
-        gap: 40px;
-        display: flex;
-        width: 368px;
+      &--alt {
+        display: none;
+        @include Desktop {
+          display: block;
+        }
       }
     }
-  }
-  &__container {
-    width: 100%;
-  }
 
-  &__button {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: 3px solid $Green;
-    background-color: transparent;
-    height: 50px;
-    padding: 5px 10px;
-
-    @include Body;
-
-    @include Tablet {
-      padding: 5px 20px;
-      height: 80px;
+    &__title {
+      @include Title;
+      color: white;
+      display: flex;
+      justify-content: center;
     }
-    &-container {
+
+    &__subtitle {
+      @include Sub-Title;
+      color: white;
+    }
+
+    &__bottom-container {
       width: 100%;
+
+      @include Desktop {
+        display: flex;
+
+        justify-content: center;
+        gap: 40px;
+      }
+    }
+
+    &__left-container {
+      width: 100%;
+      max-width: 320px;
       display: flex;
       flex-direction: column;
-      border: 3px solid $Green;
-      border-radius: 10px;
+      gap: 20px;
+      align-items: center;
+
+      @include Tablet {
+        max-width: 368px;
+        gap: 40px;
+      }
+
+      @include Desktop {
+        flex-direction: column;
+      }
+
+      &--alt {
+        display: none;
+        @include Desktop {
+          display: block;
+          gap: 40px;
+          display: flex;
+          width: 368px;
+        }
+      }
+    }
+    &__container {
+      width: 100%;
     }
 
-    &--last {
-      border-bottom: none;
+    &__button {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-top: none;
+      border-left: none;
+      border-right: none;
+      border-bottom: 3px solid $Green;
+      background-color: transparent;
+      height: 50px;
+      padding: 5px 10px;
+
+      @include Body;
+
+      @include Tablet {
+        padding: 5px 20px;
+        height: 80px;
+      }
+      &-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        border: 3px solid $Green;
+        border-radius: 10px;
+      }
+
+      &--last {
+        border-bottom: none;
+      }
     }
   }
 }
