--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -13,6 +13,12 @@
   }
 }
 
+@mixin Desktop-L {
+  @media screen and (min-width: 1200px) {
+    @content;
+  }
+}
+
 @mixin Body {
   font-family: "Abaddon";
   font-size: 1rem;
