--- a/src/components/achievement/achievement.scss
+++ b/src/components/achievement/achievement.scss
@@ -13,6 +13,10 @@
     align-items: center;
     gap: 10px;
     height: 50px;
+
+    @include Tablet {
+      height: 80px;
+    }
   }
 
   &__containers {
@@ -37,6 +41,10 @@
     align-items: center;
     padding: 0 10px;
     height: 30px;
+
+    @include Tablet {
+      height: 50px;
+    }
 
     &-text {
       @include Body;
