--- a/src/components/friendList/friendList.scss
+++ b/src/components/friendList/friendList.scss
@@ -6,6 +6,10 @@
   max-width: 320px;
   width: 100%;
 
+  @include Tablet {
+    max-width: 368px;
+  }
+
   &__title {
     @include Label;
   }
@@ -33,6 +37,10 @@
     width: 100%;
     height: 30px;
     border-bottom: 3px solid $Green;
+
+    @include Tablet {
+      height: 50px;
+    }
   }
 
   &__text {
@@ -41,5 +49,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include Tablet {
+      height: 80px;
+    }
   }
 }
