--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -35,6 +35,10 @@
       max-width: 320px;
       width: 100%;
       gap: 10px;
+
+      @include Tablet {
+        max-width: 368px;
+      }
     }
 
     &__name {
@@ -47,24 +51,41 @@
       @include Label;
     }
 
-    &__image-gear {
-      position: absolute;
-      right: 10%;
-    }
-
     &__bottom-container {
       display: flex;
       flex-direction: column;
       gap: 20px;
-      max-width: 320px;
       width: 100%;
+      align-items: center;
+
+      @include Desktop {
+        flex-direction: row;
+        justify-content: center;
+        align-items: unset;
+      }
+
+      @include Desktop {
+        gap: 40px;
+      }
+      &-left {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        max-width: 320px;
+        width: 100%;
+
+        @include Tablet {
+          max-width: 368px;
+          gap: 20px;
+        }
+      }
     }
     &__count {
       display: flex;
 
       &-courses {
         @include Label;
-        border-right: 2px solid $Green;
+        border-right: 3px solid $Green;
         padding: 0 10px 0 0px;
 
         height: 40px;
@@ -89,6 +110,10 @@
         justify-content: center;
         align-items: center;
         width: 20px;
+
+        @include Tablet {
+          padding: 0 16px;
+        }
       }
       &-following {
         @include Label;
@@ -113,6 +138,18 @@
 
     &__subtitle {
       @include Label;
+    }
+
+    &__friends-container {
+      width: 100%;
+      max-width: 320px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+
+      @include Tablet {
+        max-width: 368px;
+      }
     }
   }
 }
