Created LessonQuestion component to by dynamically render by an array of oject which will later come in from the database

--- a/src/components/lessonNav/lessonNav.scss
+++ b/src/components/lessonNav/lessonNav.scss
@@ -5,7 +5,7 @@
 .lesson-nav {
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 
   &__img {
     width: 25px;
