--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -75,6 +75,11 @@
         width: 100%;
 
         @include Tablet {
+          max-width: 500px;
+          gap: 20px;
+        }
+
+        @include Desktop {
           max-width: 368px;
           gap: 20px;
         }
