Finished Styling Lesson mobile - Desktop
Made change to setting because overflow-y was visible during Desktop view

--- a/src/components/lessonQuestions/lessonQuestions.scss
+++ b/src/components/lessonQuestions/lessonQuestions.scss
@@ -6,6 +6,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: 100%;
+  max-width: 500px;
+
+  @include Tablet {
+    gap: 40px;
+  }
 
   &__title {
     @include Sub-Title;
@@ -55,6 +61,11 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    align-items: center;
+
+    @include Tablet {
+      gap: 40px;
+    }
   }
 
   &__textarea {
