--- a/src/components/settingProfile/settingProfile.scss
+++ b/src/components/settingProfile/settingProfile.scss
@@ -9,6 +9,10 @@
   gap: 20px;
   overflow-y: scroll;
 
+  @include Desktop {
+    overflow-y: unset;
+  }
+
   &__top-container {
     width: 100%;
     display: flex;
