--- a/src/components/lessonNav/lessonNav.scss
+++ b/src/components/lessonNav/lessonNav.scss
@@ -6,10 +6,11 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  max-width: 500px;
 
   &__img {
-    width: 25px;
-    height: 25px;
+    width: 100%;
+    height: auto;
     transform: scaleX(-1);
 
     &--ai {
@@ -18,10 +19,13 @@
   }
 
   &__progress-bar {
-    width: 150px;
-    height: 25px;
+    min-width: 150px;
+    min-height: 25px;
+    width: 54%;
+    max-width: 300px;
+    max-height: 50px;
     border: 3px solid $Green;
-    border-radius: 10px;
+    border-radius: 20px;
     overflow: hidden;
 
     &-inside--25 {
@@ -49,7 +53,11 @@
   &__button {
     border: none;
     background-color: transparent;
-    width: 25px;
-    height: 25px;
+    min-width: 25px;
+    min-height: 25px;
+    width: 9%;
+    height: auto;
+    max-width: 50px;
+    max-height: 50px;
   }
 }
