--- a/src/components/levelupAi/levelupAi.scss
+++ b/src/components/levelupAi/levelupAi.scss
@@ -8,8 +8,11 @@
   display: flex;
   flex-direction: column;
   position: absolute;
+  top: 0;
+  left: 0;
   background-color: rgba(9, 7, 46, 0.8);
   align-items: center;
+  padding: 20px;
 
   &__button {
     background-color: transparent;
@@ -17,8 +20,11 @@
 
     &--close {
       position: absolute;
-      top: 0;
+      top: 5%;
       left: 19%;
+      @include Tablet {
+        left: 34%;
+      }
     }
 
     &--send {
@@ -31,11 +37,21 @@
     width: 100px;
     height: 100px;
 
+    @include Tablet {
+      width: 150px;
+      height: 150px;
+    }
+
     &--close {
       height: 25px;
       width: 25px;
       background-color: transparent;
       border: none;
+
+      @include Tablet {
+        width: 50px;
+        height: 50px;
+      }
     }
 
     &--send {
@@ -45,8 +61,12 @@
   }
 
   &__text-container {
-    width: 200px;
-    height: 200px;
+    min-width: 200px;
+    min-height: 200px;
+    height: 35%;
+    width: 62%;
+    max-width: 300px;
+    max-height: 300px;
     background-color: $Lightest-purple;
     border: 3px Solid $Green;
     display: flex;
