--- a/src/pages/DashboardPage/DashboardPage.scss
+++ b/src/pages/DashboardPage/DashboardPage.scss
@@ -110,6 +110,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 100%;
 
     @include Tablet {
       max-width: 500px;
@@ -140,30 +141,31 @@
     flex-direction: column;
     gap: 10px;
     padding: 0 20px;
-
-    @include Tablet {
-      padding: 0 50px;
-    }
   }
 
   &__course {
+    min-width: 30px;
+    min-height: 30px;
+    width: 13%;
+    height: auto;
+    max-width: 50px;
+    max-height: 50px;
+
     @include Tablet {
       width: 50px;
       height: 50px;
     }
     &--big {
-      @include Tablet {
-        width: 130px;
-        height: 130px;
-      }
+      width: 38%;
+      height: auto;
+      max-width: 130px;
+      max-height: 130px;
     }
   }
 
   &__course-icon {
-    @include Tablet {
-      height: 100%;
-      width: 100%;
-    }
+    height: 100%;
+    width: 100%;
 
     &--small {
       width: 50px;
@@ -175,6 +177,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    justify-content: space-between;
 
     @include Tablet {
       gap: 40px;
