--- a/src/pages/SelectLanguage/SelectLanguage.scss
+++ b/src/pages/SelectLanguage/SelectLanguage.scss
@@ -47,6 +47,7 @@
       flex-direction: column;
       border: 3px solid white;
       border-radius: 10px;
+      overflow: hidden;
     }
     &-button {
       @include Body;
@@ -69,6 +70,14 @@
       @include Tablet {
         height: 80px;
       }
+
+      &--active {
+        background-color: $Pink;
+      }
     }
+  }
+
+  &__img {
+    width: 20px;
   }
 }
