Created a user awards.jsx file to just show userawards

--- a/src/components/UserAwards/UserAwards.scss
+++ b/src/components/UserAwards/UserAwards.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.achievement {
+.awards {
   &__title {
     @include Label;
   }
