Created an alert modal to replace any alert.() windows

--- a/src/components/friendList/friendList.scss
+++ b/src/components/friendList/friendList.scss
@@ -30,6 +30,10 @@
     height: 100%;
     border: none;
     border-right: 3px solid $Green;
+    &:hover {
+      background-color: $Green;
+    }
+
     @include Label;
 
     &:last-child {
