--- a/src/components/SoundButton/SoundButton.scss
+++ b/src/components/SoundButton/SoundButton.scss
@@ -7,11 +7,20 @@
   top: 1%;
   right: 5%;
 
+  @include Tablet {
+    right: 2%;
+  }
+
   &__button {
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
     border-radius: 100%;
     border: 2px Solid $Green;
+
+    @include Tablet {
+      height: 50px;
+      width: 50px;
+    }
   }
   &__img {
     height: 100%;
