--- a/src/pages/DashboardPage/DashboardPage.scss
+++ b/src/pages/DashboardPage/DashboardPage.scss
@@ -49,16 +49,17 @@
     background-color: $Light-Purple;
     border-radius: 10px;
     height: 50px;
-    width: 150px;
+    min-width: 150px;
     @include Body;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
+    padding: 0 10px;
 
     @include Tablet {
       height: 80px;
-      width: 200px;
+      min-width: 200px;
     }
   }
 
