--- a/src/pages/SignInPage/SignInPage.scss
+++ b/src/pages/SignInPage/SignInPage.scss
@@ -78,7 +78,7 @@
     }
   }
 
-  &__form {
+  &__form-container {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -99,6 +99,14 @@
       border-radius: 25px;
       border: white 3px solid;
     }
+  }
+
+  &__form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
   }
 
   &__link {
