Fixed signin google button issue as well as changed out alerts() for the alertmodal

--- a/src/components/AlertModal/AlertModal.scss
+++ b/src/components/AlertModal/AlertModal.scss
@@ -14,6 +14,8 @@
   padding: 20px;
   background-color: $Light-Purple;
   border-radius: 10px;
+  align-items: center;
+  justify-content: space-evenly;
 
   &__text {
     @include Sub-Title;
