--- a/src/components/LoadingModal/LoadingModal.scss
+++ b/src/components/LoadingModal/LoadingModal.scss
@@ -7,7 +7,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(9, 7, 46, 0.8);
