Finished styling leaderboard page and create the firebase backend for leaderboard

--- a/src/components/MyCourses/MyCourses.scss
+++ b/src/components/MyCourses/MyCourses.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.setting-courses {
+.my-courses {
   display: flex;
   flex-direction: column;
   align-items: center;
