--- a/src/pages/LeaderboardPage/LeaderboardPage.scss
+++ b/src/pages/LeaderboardPage/LeaderboardPage.scss
@@ -3,13 +3,9 @@
 @use "../../styles/partials/variables" as *;
 
 .leaderboard {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-
   @include Desktop {
+    display: flex;
+    width: 100%;
     height: 100dvh;
   }
   &-page {
@@ -24,6 +20,19 @@
     align-items: center;
     gap: 20px;
     overflow-y: scroll;
+
+    &__top {
+      max-width: 500px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+
+    &__bottom {
+      width: 100%;
+      max-width: 500px;
+    }
   }
   &__icon {
     height: 100px;
@@ -59,6 +68,7 @@
     &-img {
       height: 30px;
       width: 30px;
+      border-radius: 50%;
     }
   }
 
