--- a/src/components/addFriends/addFriends.scss
+++ b/src/components/addFriends/addFriends.scss
@@ -52,3 +52,50 @@
     }
   }
 }
+
+.find-friend-modal {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(9, 7, 46, 0.8);
+  align-items: center;
+  padding: 20px;
+
+  &__title {
+    @include Title;
+  }
+
+  &__close {
+    position: absolute;
+    top: 1%;
+    right: 1%;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background: transparent;
+  }
+
+  &__image {
+    width: 100%;
+  }
+
+  &__results {
+    margin-top: 20px;
+
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+  }
+
+  &__result-item {
+    color: White;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @include Body;
+  }
+}
